change desription & code block

--- a/cheatsheet.org
+++ b/cheatsheet.org
@@ -2,124 +2,130 @@
 #+date: 2020-10-29
 #+HUGO_BASE_DIR: . 
 
-:PROPERTIES:
-:EXPORT_FILE_NAME: Cheatsheet
-:EXPORT_DESCRIPTION: My cheatsheet
-:END:
+#+begin_description
+Mostly Git commands.
+#+end_description
 
 ** Git commands
 
-remote .git
+*** Remote .git
 
 #+begin_src
+
 $ ls .git
-
 $ rm .git
-
 rm: .git: is a directory
-
 $ rm -rf .git
+
 #+end_src
 
-download a file from command line
+*** Download a file from command line
 
 #+begin_src
-curl -LO https://upload.wikimedia.org/wikipedia/commons/c/c4/Creative-Tail-Halloween-ghost.svg
 
-curl -L https://upload.wikimedia.org/wikipedia/commons/7/74/Twemoji2_1f47b.svg > ghost.svg
+$ curl -LO https://upload.wikimedia.org/wikipedia/commons/c/c4/Creative-Tail-Halloween-ghost.svg
+$ curl -L https://upload.wikimedia.org/wikipedia/commons/7/74/Twemoji2_1f47b.svg > ghost.svg
+
 #+end_src
 
-Cherry pick
+*** Cherry pick
 
-```
+#+begin_src
+
 $ git remote add some_github_id https://github.com/some_github_id/rust-in-blockchain.git
 $ git fetch some_github_id
-
 $ git log some_github_id/master
 $ git cherry-pick some_commit_hash
-
 $ git diff HEAD^..HEAD
 $ git push origin master
 
-```
+#+end_src
 
-Reset a commit
+*** Reset a commit
 
-```
+#+begin_src
+
 $ git reset HEAD^
-
 $ git rm */~
-
 $ git rm */*~
-
 $ git commit --amend
-
 $ git log
-
 commit ad8b178eb99e414f7eb298798acbe1317099cc1b (HEAD -> master)
 
-```
+#+end_src
 
-Hide changes and do not commit
+*** Hide changes and do not commit
 
-```
-git stash
-```
+#+begin_src
 
-Cancel hiding
+$ git stash
 
-```
-git stash pop 
-```
+#+end_src
 
-Add submodule to rib
+*** Cancel hiding
 
-```
-ln -> means link
-```
+#+begin_src
 
-Creat an aliase for syncing file 
+$ git stash pop 
 
-```
-ln -s ../awesome-blockchain-rust/README.md awesome-blockchain-rust.md 
+#+end_src
 
-```
+*** Add submodule to rib
 
-Recover to previous clean code
+#+begin_src
 
-```
-git checkout -f 
-```
+$ ln -> means link
 
-About PATH
+#+end_src
 
-```
+*** Creat an aliase for syncing file 
+
+#+begin_src
+
+$ ln -s ../awesome-blockchain-rust/README.md awesome-blockchain-rust.md 
+
+#+end_src
+
+*** Recover to previous clean code
+
+#+begin_src
+
+$ git checkout -f 
+
+#+end_src
+
+*** About PATH
+
+#+begin_src
+
 $ pwd
-
 $ echo $PWD
-
 $ export PATH=$PATH:$PWD
-```
 
-SSH
+#+end_src
 
-```
-eval `ssh-agent`
+*** SSH
 
-ssh-add
+#+begin_src
 
-ssh -T git@github.com 
-```
+$ eval `ssh-agent`
+$ ssh-add
+$ ssh -T git@github.com 
 
-Generated a new key
+#+end_src
 
-```
-ssh-keygen -C your@email.com 
-```
+*** Generated a new key
 
+#+begin_src
 
-Move a file to current
+$ ssh-keygen -C your@email.com 
 
-```
-git mv www/contracts .
-```
+#+end_src
+
+*** Move a file to current
+
+#+begin_src
+
+$ git mv www/contracts .
+
+#+end_src
