--- a/lighthouse-run.org
+++ b/lighthouse-run.org
@@ -2,9 +2,17 @@
 #+date: 2020-08-12
 #+HUGO_BASE_DIR: . 
 
+
+#+begin_description
+
+Lighthouse first try. 
+
+#+end_description
+
 ** 2020-08-12 Testing
 
-```
+#+begin_src
+
 validator_client_1  | Your wallet's 12-word BIP-39 mnemonic is:
 validator_client_1  | 
 validator_client_1  | 	enlist whip budget awkward gold glad toast demise grass radar chicken link
@@ -47,4 +55,4 @@ validator_client_1  | Aug 12 17:15:05.333 INFO Loaded validator keypair store   
 validator_client_1  | Aug 12 17:15:05.335 INFO Block production service started        service: block
 validator_client_1  | Aug 12 17:15:05.335 INFO Attestation production service started  next_update_millis: 2664, service: attestation
 
-```
+#+end_src
