--- a/lighthouse-run.org
+++ b/lighthouse-run.org
@@ -2,8 +2,8 @@
 #+date: 2020-08-12
 #+hugo_tags: blockchain lighthouse
 #+hugo_categories: blockchain
-#+hugo_base_dir: . 
 #+hugo_section: blockchain
+#+hugo_base_dir: . 
 
 #+begin_description
 
@@ -11,10 +11,9 @@ Lighthouse first try.
 
 #+end_description
 
-** 2020-08-12 Testing
+* 2020-08-12 Testing
 
-#+begin_src
-
+#+begin_src shell
 validator_client_1  | Your wallet's 12-word BIP-39 mnemonic is:
 validator_client_1  | 
 validator_client_1  | 	enlist whip budget awkward gold glad toast demise grass radar chicken link
@@ -56,5 +55,4 @@ validator_client_1  | Aug 12 17:15:05.311 INFO Genesis has already occurred     
 validator_client_1  | Aug 12 17:15:05.333 INFO Loaded validator keypair store          voting_validators: 1
 validator_client_1  | Aug 12 17:15:05.335 INFO Block production service started        service: block
 validator_client_1  | Aug 12 17:15:05.335 INFO Attestation production service started  next_update_millis: 2664, service: attestation
-
 #+end_src
